Added improvements to master

--- a/Report/Master.tex
+++ b/Report/Master.tex
@@ -22,6 +22,8 @@
 
 \include{docs/features/features}
 
+\include{docs/improvements}
+
 %\startcontents[dokumentation]
 %\renewcommand{\baselinestretch}{0.75}\normalsize
 %\printcontents[dokumentation]{ }{0}{\chapter*{Indholdsfortegnelse}}
