Fixed last errors

--- a/Report/docs/KnownBugs.tex
+++ b/Report/docs/KnownBugs.tex
@@ -30,6 +30,6 @@
 	
 	\item \textbf{Zoom:} The zoom is buggy because it does not zoom but scales the map and then the center is not set correctly. To help minimize the implications of the zoom bug a max distance for how much as player can pan away from the map has been set.
 
-	\item \textbf{Settings select figure:} The selection of the player figure puts all figure on the same spot and a user cant pick an avatar. The avatar slider going panic if you try to slide to the side but this bug only occurres if the screen resolution is very small.
+	\item \textbf{Settings select figure:} The selection of the player avatar puts all avatar on the same spot and a user cant pick an avatar. The slider goes crazy if you try to slide to the side this bug only occurs if the screen resolution is very small.
 	
 \end{enumerate}
