Changed figur to figure and indholdsfortegnelse to table of content. Also rewrote some text in improvements.tex based on the review.

--- a/Report/Master.tex
+++ b/Report/Master.tex
@@ -9,7 +9,7 @@
 %Indholdsfortegnelse
 \startcontents[rapport]
 \renewcommand{\baselinestretch}{0.75}\normalsize
-\printcontents[rapport]{ }{0}{\chapter*{Indholdsfortegnelse}}
+\printcontents[rapport]{ }{0}{\chapter*{Table of content}}
 \renewcommand{\baselinestretch}{1.1}\normalsize
 
 \include{docs/Intro}
