Made a change based on the review

--- a/Report/docs/features/subfeatures/fragments.tex
+++ b/Report/docs/features/subfeatures/fragments.tex
@@ -1,6 +1,8 @@
 \section{Fragments}
 
-The player has the option to see his / hers own items and stats or another players, as well as monster stats. An example of how the fragment is shown to the user is on figure \ref{fig:fragmentOverview} and \ref{fig:fragmentDetailed}.
+The player has the possibility to see stats for players, monsters and items.
+He can also see all the items each player has gathered. An example of how the fragment is shown to the user is on figure \ref{fig:fragmentOverview} and \ref{fig:fragmentDetailed}.
+
 
 \begin{figure}[ht!]
 	\centering
