Fixed typo and moved work plan up, so it's right after intro.

--- a/Report/docs/arbejdsfordeling.tex
+++ b/Report/docs/arbejdsfordeling.tex
@@ -15,7 +15,7 @@ In the following work plan is based on our task board and pull request through o
 	
 	\item Jakob
 	\begin{itemize}
-		\item Create fragments for players/monsters state and items
+		\item Create fragments for players/monsters stats and items
 		\item Create items and item system
 		\item Combat system
 	\end{itemize}
