Made ref to chapter "Known bugs"

--- a/Report/docs/improvements.tex
+++ b/Report/docs/improvements.tex
@@ -34,4 +34,4 @@ This could be done in two ways. Either a similar approach as the item listener, 
 The current game only has weapons as items. However, more items will be included in the future. This is also the reason that ItemWeapon class inherit from GameItem class as shown in figure \ref{fig:itemsAndMonstersDiagram}. An example would be armor, that therefore also would inherit from GameItem class.
 
 \section{Firebase synchronisation}
-When two or more players take an action at the same time only one would actually take place, the rest would reset their actions. This is both quite annoying for the users but it also introduces some potentially errors since each game state list is maintained asynchronously and separately; One list might get updated correctly, but the others reset. This bug/feature are explained in depth in the section "Known Bugs". 
+When two or more players take an action at the same time only one would actually take place, the rest would reset their actions. This is both quite annoying for the users but it also introduces some potentially errors since each game state list is maintained asynchronously and separately; One list might get updated correctly, but the others reset. This bug/feature are explained in depth in chapter \ref{ch:knownBugs}. 
