--- a/Report/docs/features/features.tex
+++ b/Report/docs/features/features.tex
@@ -4,6 +4,8 @@ Backfight consist of different features - each contributing to a better experien
 
 \input{docs/features/subfeatures/Firebase}
 
+\input{docs/features/subfeatures/itemsAndMonsters}
+
 \input{docs/features/subfeatures/PanZoom}
 
 \input{docs/features/subfeatures/fragments}
