Ref til git on front page

--- a/Report/docs/forside.tex
+++ b/Report/docs/forside.tex
@@ -2,7 +2,8 @@
 	\center % Center everything on this page
 	
 	\textsc{\LARGE Ingeniørhøjskolen Aarhus Universitet}
-	\noindent\hfil\rule{0.9\textwidth}{.4pt}\\[2.5cm]
+	\noindent\hfil\rule{0.9\textwidth}{.4pt}\\
+	Git repo: https://github.com/JakobVork/BackFight\\[2.5cm]
 	\textsc{Group 07}
 	
 	\begin{figure}[ht!]
