--- a/Report/preamble.tex
+++ b/Report/preamble.tex
@@ -1,3 +1,5 @@
+%%%%%%% This document is a modyfied version of preamble_ida15 given, for free use, to the students who participated in the LaTeX course in 2015. %%%%%%%
+
 \documentclass[
 a4paper,
 10pt,fleqn,
