--- a/Report/docs/Conclusion.tex
+++ b/Report/docs/Conclusion.tex
@@ -3,5 +3,8 @@
 \chapter{Conclusion}
 This application is a 1-4 player co-op game. Where the player uses their own android device to connect to the game and play. The game resolves around killing monsters and becoming stronger by finding items.
 
-We wanted to give the players the experience of playing on the same board even though they are playing with different android devices. We succeeded with this task by using the FireBase Database which pushes new information out to the users, so when a player makes a change on the board the others boards get updated. Though we did run into some problems with the database due to the reason that our state of the game is saved in lists. Firebase can't handle multiple people changing a list at the same time, which gives the error described through this paper.
+We wanted to give the players the experience of playing on the same board even though they are playing with different android devices. We succeeded with this task by using the Firebase Database which pushes new information out to the users, so when a player makes a change on the board the others boards get updated. Though we did run into some problems with the database due to the reason that our state of the game is saved in lists. Firebase can't handle multiple people changing a list at the same time, which gives the error described in this paper.
 
+Through this project we learn to program in Java which we had none experience with before hand. To begin with it seemed easy as we all have worked with C\# and we could easily relate to how Java works. We did have some troubles with it as it is an old language compared to C\# and were missing some functionality as e.g. LINQ.
+
+When developing the application we needed most of the knowledge that we had gotten through the course. We use a custom view to display the map where we have written our own handling of what happens when the screen is touched and with a fragment on top to show stats of the selected object. A service is running to notify the players when the next round is started if they closed the application. 
