fixed minor errors

--- a/Report/docs/Conclusion.tex
+++ b/Report/docs/Conclusion.tex
@@ -1,9 +1,9 @@
 \pagestyle{Uni}
 
 \chapter{Conclusion}
-This application is a 1-4 player co-op game. Where the player uses their own android device to connect to the game and play. The game resolves around killing monsters and becoming stronger by finding items.
+This application is a 1-4 player co-op game each player uses their own android device to connect to the game and play. The game resolves around killing monsters and becoming stronger by finding items.
 
-We wanted to give the players the experience of playing on the same board even though they are playing with different android devices. We succeeded with this task by using the Firebase Database which pushes new information out to the users, so when a player makes a change on the board the others boards get updated. Though we did run into some problems with the database due to the reason that our state of the game is saved in lists. Firebase can't handle multiple people changing a list at the same time, which gives the error described in this paper.
+We wanted to give the players the experience of playing on the same board even though they are playing with different android devices. We succeeded with this task by using the Firebase Database which pushes new information out to the users, so when a player makes a change on the board the others boards get updated. We ran into some problems with the database due to the reason that our state of the game is saved in lists. Firebase can't handle multiple people changing a list at the same time, which gives the error described in chapter \ref{ch:knownBugs}.
 
 Through this project we learn to program in Java which we had none experience with before hand. To begin with it seemed easy as we all have worked with C\# and we could easily relate to how Java works. We did have some troubles with it as it is an old language compared to C\# and were missing some functionality as e.g. LINQ.
 
