--- a/Report/Architecture/StateMachine.tex
+++ b/Report/Architecture/StateMachine.tex
@@ -1,6 +1,6 @@
 \section{State machine for menu}
 
-On \ref{StateMachine} the state machine shows of how the  menu works, it shows how the flow is and how the user can navigate to the different states. The app starts on a splash screen there is showed for 6 seconds and open the main menu. From the main menu the is a lot of options for the user to do e.g settings and rules. The central part of the diragram is to show how a user can navigate between the different activities and the flow of the app. The start game button os only available for the host of the lobby, for the other players in the lobby the button is hidden and cant be clicked.
+On figure \ref{StateMachine} the state machine shows how the menu works, it shows how the flow is and how the user can navigate to the different states. The app starts on a splash screen there is showed for 6 seconds and open the main menu. From the main menu the is a lot of options for the user to do e.g settings and rules. The central part of the diragram is to show how a user can navigate between the different activities and the flow of the app. The start game button os only available for the host of the lobby, for the other players in the lobby the button is hidden and cant be clicked.
 
 \begin{figure}
 	\centering
