--- a/Report/Requirements/UserInterfaceDesign.tex
+++ b/Report/Requirements/UserInterfaceDesign.tex
@@ -1,5 +1,5 @@
 \section{User interface design}
-This section will show the ideas about how the application was supposed to look and feel when the design was made in the very begin of the project.
+This section will show the ideas about how the application was supposed to look and feel when the design was made in the very beginning of the project.
 
 On \ref{navigation} we see the flow from the main menu and how to create a game and start it.
 
