--- a/Report/Requirements/UserStories.tex
+++ b/Report/Requirements/UserStories.tex
@@ -25,7 +25,7 @@
 		
 		\item As a User, I can take an action
 		\begin{itemize}
-			\item As a User, I can move a space
+			\item As a User, I can move to an adjacent tile
 			\item As a User, I can attack a monster
 		\end{itemize}
 		
@@ -38,7 +38,7 @@
 		\item As a User, I have vision range
 		\begin{itemize}
 			\item As a User, I can see the tiles in range around me and other players and if there is a item/monster placed on them.
-			\item As a User, I can see the what type a tile is I or another player have passed it earlier on but no longer is in range of it.
+			\item As a User, I can see what type a tile is if I or another player have passed it earlier on but no longer is in range of it.
 			\item As a User, I can't see tiles that I or another player have not yet been in range of.
 		\end{itemize}
 	\end{itemize}
