--- a/Report/Requirements/Vision.tex
+++ b/Report/Requirements/Vision.tex
@@ -1,2 +1,2 @@
 \section{Vision}
-	The vision with the project is to make a social game that is played as co-op so that a fellow-felling is created.  The game is intended for physical attendance where each player has their own android device. However, it is also possible to play online with friends, since all communication is intended to be happening over the Internet. In the following sections there are various Personans and scenarios that will try to give an impression on how a product like the one to be developed could be used.
+	The vision with the project is to make a social game that is played as co-op so that a fellow-feeling is created.  The game is intended for physical attendance where each player has their own android device. However, it is also possible to play online with friends, since all communication is intended to be happening over the Internet. In the following sections there are various Personans and scenarios that will try to give an impression on how a product like the one to be developed could be used.
