--- a/Report/docs/arbejdsfordeling.tex
+++ b/Report/docs/arbejdsfordeling.tex
@@ -1,7 +1,7 @@
 \pagestyle{Uni}
 
 \chapter{Work plan}
-In the following work plan is based on our task board and pull request through out the project. Each item on the work plan varies in size.
+The following work plan is based on our task board and pull requests through out the project. Each item on the work plan varies in size.
 
 \begin{itemize}
 	\item Anders Meidahl
