--- a/Report/docs/improvements.tex
+++ b/Report/docs/improvements.tex
@@ -9,7 +9,7 @@ The team like the idea of items scattered around on the map, but would also like
 
 \section{Monster and item class type}
 It is currently possible to spawn three different monster class': 'Common', 'Epic' and 'Boss'. However, the class type is only known at spawn time. As soon as the monster is in the list there is no way to check the class type unless one checks on the name. \\
-The same problem is present for items, but here one can't even spawn class type, since it's currently totally random. Therefore it would benefit the gameplay experience to serve the class type info to the player via the fragment (See figure \ref{fig:classTypeCommon} and \ref{fig:classTypeLegendary}). This will also give some better balancing options for the game in case we introduce drop tables etc. so the chance of getting a legendary item is less likely than a simple common sword.
+The same problem is present for items, but here one can't even spawn class type, since it's currently totally random. Therefore it would benefit the gameplay experience to serve the class type info to the player via the fragment (See figure \ref{fig:classTypeCommon} and \ref{fig:classTypeLegendary}). This will also give some better balancing options for the game in case we introduce monster drops etc. so the chance of getting a legendary item is less likely than a simple common sword.
 
 \begin{figure}[ht!]
 	\centering
