--- a/Report/Requirements/Personas.tex
+++ b/Report/Requirements/Personas.tex
@@ -1,4 +1,4 @@
 \section{Personas}
-\textbf{Christian} is 25 years old and lives in the hearth of Aarhus, he is dreaming of becoming a teacher. He loves to sit together with his friends late into the evening and play board games at a friends place, as the location is better and there is more room. Christian is quite technology interested and he always has the latest Samsung phone. In addition, he loves to spend his spare time playing computer games. The way he gets around in Aarhus is by using his bike. Christian owns the game that the group of friends all think is the most fun to play but he is tired of having to transport the game back and forth as it rather unhandy.
+\textbf{Christian} is 25 years old and lives in the hearth of Aarhus, since he is dreaming of becoming a teacher. He loves to sit together with his friends late into the evening and play board games at a friends place, as the location is better and there is more room. Christian is quite technology interested and he always has the latest Samsung phone. In addition, he loves to spend his spare time playing computer games. The way he gets around in Aarhus is by using his bike. Christian owns the game that the group of friends all think is the most fun to play but he is tired of having to transport the game back and forth as it rather unhandy.
 
 \textbf{Lærke} is 23 years old and lives in Manchester, she is currently an exchange students during her education in state economics. Lærke is very socially established and has a lot of good friends in Denmark. She keeps in touch with her friends in Denmark by using her android tablet to play different games.
