--- a/Report/docs/features/subfeatures/itemsAndMonsters.tex
+++ b/Report/docs/features/subfeatures/itemsAndMonsters.tex
@@ -1,6 +1,6 @@
 \section{Items and Monsters}
 
-Items and monsters works in many way the same even though monsters also share some common traits with the player class.
+Items and monsters works in many ways the same even though monsters also share some common traits with the player class.
 Both monsters and items has a title/name, description etc.
 
 \begin{figure}[ht!]
